@@ -61,7 +61,7 @@ import os
 import objc
 
 
-__all__ = ["AutoBaseClass", "NibInfo", "extractClasses"]
+__all__ = ["AutoBaseClass", "NibInfo", "extractClasses", "InvalidOutletDefinition"]
 
 
 from Foundation import NSDictionary, NSObject, NSBundle
@@ -70,6 +70,7 @@ import AppKit  # not used directly, but we look up classes from AppKit
 
 
 class NibLoaderError(Exception): pass
+class InvalidOutletDefinition (NibLoaderError): pass
 
 
 class ClassInfo:
@@ -207,6 +208,14 @@ class NibInfo(object):
         for o in clsInfo.outlets:
             if not methods.has_key(o):
                 methods[o] = objc.IBOutlet(o)
+            elif isinstance(methods[o], objc.ivar):
+                iv = methods[o]
+                if not iv.isOutlet:
+                    methods[o] = objc.ivar(o, iv.typestr, isOutlet=True)
+
+            else:
+                raise InvalidOutletDefinition("class %s, outlet %s"%(name, o))
+
 
         for a in clsInfo.actions:
             if not methods.has_key(a):
